--- a/_titlepage.tex
+++ b/_titlepage.tex
@@ -19,30 +19,29 @@
 	\begin{center}
 		% TODO Art der Abschlussarbeit 
 		\noindent { \huge
-			Bachelorarbeit \\
+			Master Thesis \\
 		}
 		\vspace{14mm}
 		% TODO Title
 		\noindent \textbf{\huge
-			Titel
+			Improving Distributed Temperature Sensing in Sensor Networks utilising Machine Learning
 		}
 		\vspace{60mm}	
 	\end{center}
 	
 	\vfill
 	
-	% TODO Angaben
-	\noindent \textbf{Max Peter Mustermann} \\
+	\noindent \textbf{Ian Maurice Buck} \\
 	\noindent \rule{\textwidth}{0.4mm} 
-	\noindent{\textrm{max.peter.mustermann@informatik.uni-hamburg.de}} \\
-	\noindent{\textrm{Studiengang Informatik}} \\
-	\noindent{\textrm{Matr.-Nr. 12345678}} \\
+	\noindent{\textrm{ian.buck@studium.uni-hamburg.de}} \\
+	\noindent{\textrm{Study Program Information Systems}} \\
+	\noindent{\textrm{Matr.-Nr. 6911467}} \\
 	\begin{tabbing}
 		\hspace{8em} \=  \kill
-		Erstgutachter: \> Professor A. Ersthelfer \\
-		Zweitgutachter: \> Professor Z. Eswirdschonwerden \\
+		First Reviewer: \> Prof. Dr. Janick Edinger \\
+		Second Reviewer: \> Philipp Kisters \\
 		~ \\
-		Abgabe: 09.2020
+		Abgabe: 08.2023
 	\end{tabbing}
 	
 	% Titlepage back
@@ -52,9 +51,9 @@
 	
 	% wenn man Lust auf ein Zitat hat...
 	% ... ansonsten auskommentieren
-	%~\\ \vfill \noindent 
-	%A distributed system is one where the failure of some \\
-	%computer I've never heard of can keep me from getting my work done. \\
-	%\textit{-- Leslie Lamport}
+	~\\ \vfill \noindent 
+	A distributed system is one where the failure of some \\
+	computer I've never heard of can keep me from getting my work done. \\
+	\textit{-- Leslie Lamport}
 \end{titlepage}
 
