--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -1,3 +1,2 @@
-\newacronym{a}{AA}{Abkürzung 1}
-\newacronym{b}{BBB}{Abkürzung 2}
-\newacronym{c}{CCCC}{Abkürzung 3}
+\newacronym{uhi}{UHI}{Urban Heat Island}
+\newacronym{lst}{LST}{Land Surface Temperatures}
