--- a/abstract.tex
+++ b/abstract.tex
@@ -1,2 +1,2 @@
 \chapter*{Abstract}
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer quis lectus eget purus auctor sollicitudin. Sed tempus, leo quis nonummy iaculis, tellus justo bibendum mi, eu facilisis est sapien non eros. Ut tincidunt. Proin eleifend tristique est. Nulla facilisi. Cras ante mauris, facilisis at, fringilla quis, venenatis ornare, libero. Nam viverra varius nibh. Suspendisse potenti. Sed velit quam, euismod quis, sagittis eu, sodales sit amet, dui. Sed sed diam. Vivamus tincidunt quam a eros. Ut quis metus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed ut tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur vulputate nibh a tortor. Nullam scelerisque risus nonummy urna tempor sagittis.
+Many science-based applications need continuous or gridded input data in order to work properly. This paper investigates how single data-points can be combined to create a continuous data layer, in which missing data points are interpolated. An example for such an application would be the prediction of temperatures coming from single sensors and weather-stations, that can be combined to detect \gls{uhi}s. \gls{uhi}s are weather phenomena that get ampflified among other things by the ongoing densification of urban areas to create more living space, typically accompanied by the removal of green areas that can help with the dissipation of heat. These heat islands, in which the temperature is significantly higher than in surrounding areas, pose a threat to the health of the urban population, especially to the elderly, children and people with existing health conditions. Traditionally, \gls{uhi}s are detected using \gls{lst} captured by satellites, that usually have the downside of low spatial and temporal density. This paper proposes an alternative approach by creating a machine-learning model that is able to interpolate missing data between data-points coming from citizen-owned sensor networks that are combined with mobile sensors, which can be attached to rental bikes, buses or e-scooters, to gain temporary insights into otherwise unobserved areas. The model combines data streams of sensor readings with historic data and creates a fine-granular continuous data-layer, in this case for temperature, which allows for an accurate localization of \gls{uhi}s.
