--- a/main.tex
+++ b/main.tex
@@ -39,12 +39,10 @@
 	
 	\include{chapter1}
 	\include{chapter2}
-	%\include{kapitel3}
-	%\include{kapitel4}
-	%\include{kapitel5}
-	%\include{kapitel6}
-	%\include{kapitel7}
-	%\cleardoublepage
+	\include{chapter3}
+	\include{chapter4}
+	\include{chapter5}
+	\cleardoublepage
 	
 	% bibliography 
 	\frontmatter
