--- a/_titlepage.tex
+++ b/_titlepage.tex
@@ -24,7 +24,7 @@
 		\vspace{14mm}
 		% TODO Title
 		\noindent \textbf{\huge
-			Improving Distributed Temperature Sensing in Sensor Networks utilising Machine Learning
+			Improving the Availability of Contextual Data with Machine Learning-Based Interpolation
 		}
 		\vspace{60mm}	
 	\end{center}
