--- a/main.tex
+++ b/main.tex
@@ -37,11 +37,23 @@
 	% arabic page numbering
 	\mainmatter
 	
+	% Introduction
 	\include{chapter1}
+
+	% Related Work
 	\include{chapter2}
+
+	% System architecture
 	\include{chapter3}
+
+	% Machine Learning Model Design
 	\include{chapter4}
+
+	% Evaluation
 	\include{chapter5}
+
+	% Conclusion
+	\include{chapter6}
 	\cleardoublepage
 	
 	% bibliography 
