--- a/myPreamble.sty
+++ b/myPreamble.sty
@@ -81,10 +81,10 @@
   % PDF document information
   \hypersetup
   {
-  	pdftitle     = {Titel},
-  	pdfsubject   = {Universität Hamburg / DOS / Art des Artikels},
-  	pdfauthor    = {Vorname Name},
-  	pdfkeywords  = {Keywords},
+  	pdftitle     = {Improving the Availability of Contextual Data with Machine Learning-Based Interpolation},
+  	pdfsubject   = {Universität Hamburg / DOS / Master Thesis},
+  	pdfauthor    = {Ian Buck},
+  	pdfkeywords  = {Data Interpolation, Machine Learning, Temperature},
   	plainpages   = false, pdfpagelabels
   }
   
