--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,12 +1,8 @@
-\chapter{Evaluation}
-\label{chap:Evaluation}
+\chapter{Preparation of Datasets}
+\label{chap:preparations data sets}
 
-TODO
+- overview of sources for good datasets for temperature and climate related research
 
-\section{Data Set Procurement}
-
-TODO
-
-\section{Model Comparison}
-
-TODO
+goal:
+- collect mutiple datasets (many features, fine-granualar spaciotemporal)
+- enhance datasets with additonal information (soil conditions, zoning plans, vegetation health)
